commit all changes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+server.port=8090
 spring.flyway.enabled=true
 spring.flyway.clean-on-validation-error=true
 spring.flyway.locations=classpath:db/migration,classpath:db/specific/postgresql
